[BMCDOT-165] Fix alignment and other issues; revert changes to framework and overrides.

--- a/app/assets/stylesheets/transam_core/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/transam_core/framework_and_overrides.css.scss
@@ -311,7 +311,7 @@ label.error {
 
 // Make tables more condensed
 .bootstrap-table .table:not(.table-condensed), .bootstrap-table .table:not(.table-condensed) > tbody > tr > th, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > th, .bootstrap-table .table:not(.table-condensed) > thead > tr > td, .bootstrap-table .table:not(.table-condensed) > tbody > tr > td, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > td {
-  padding: 8px;
+  padding: 3px;
 }
 
 .table-condensed > thead > tr > th, .table-condensed > thead > tr > td, .table-condensed > tbody > tr > th, .table-condensed > tbody > tr > td, .table-condensed > tfoot > tr > th, .table-condensed > tfoot > tr > td {
